# darknet_ros_kinect

./: README.md
darknet_ros/config/: ros_kinect.yaml
darknet_ros/launch/: darknet_ros.launch  darknet_ros_kinect.launch
darknet_ros_kinect/: CMakeLists.txt  package.xml
darknet_ros_kinect/msg/: ObjectPosition.msg  ObjectPositions.msg
darknet_ros_kinect/src/: kinect.cpp
